--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -4,12 +4,20 @@
     background-size: 100%;
     background-repeat: no-repeat;
 }
-#whiteBorderGlassBox
-{
-    border: 2px solid rgba(255,255,255, .75);
-    padding: 8px;
-}
 
 .homeHeadContainer{
     background-color: rgba(255,255,255, .50);
+}
+.whiteContainerPadded
+{
+    padding: 15px;
+    background-color: #feffff;
+}
+
+img.icon
+{
+    width: auto;
+    max-width: 30px;
+    height: auto;
+    vertical-align: -webkit-baseline-middle;
 }
