--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,3 +1,45 @@
-<p>
-  profile works!
-</p>
+<div id="profileContainer">
+  <div class="container patop45">
+    <div class="row">
+      <div class="col-md-3">
+        <div class="avatarFrameonline">
+          <img src="assets/img/generic_avatar.png" class="avatarImage img-fluid" alt="">
+        </div>
+        <hr>
+        <div>
+          <span>Change profile image</span>
+          <br>
+          <label for="" class="custo-file-upload">
+            <input type="file">
+            SubirAvatar
+          </label>
+        </div>
+      </div>
+      <div class="col-md-9">
+        <div>
+          <label fixed>Nick</label>
+          <input type="text" class="form-control">        
+        </div>
+        <div>
+            <label fixed>Subnick</label>
+            <input type="text" class="form-control">        
+        </div>
+        <div>
+          <label fixed>Email</label>
+          <input type="email" class="form-control" disabled>        
+        </div>
+        <div>
+          <label fixed>Status</label>
+          <select class="form-control" >  
+            <option value="online">Online</option>
+            <option value="away">Away</option>
+            <option value="busy">Busy</option>
+            <option value="offline">Offline</option>
+          </select>      
+        </div>
+        <hr>
+        <a routerLink="/home" class="btn btn-primary btn-block">Guardar</a>
+      </div>
+    </div>    
+  </div>
+</div>
