--- a/src/styles.css
+++ b/src/styles.css
@@ -23,6 +23,10 @@
 {
     margin-top: 15px !important;
 }
+.margbo5
+{
+    margin-bottom: 5px !important;
+}
 .margbot15
 {
     margin-bottom: 15px !important;
@@ -34,4 +38,48 @@
 #homeAvatarPicture
 {
     max-width: 100px;
+}
+.avatarFrameonline
+{
+    background: #d2ff6b;
+    background: -moz-linear-gradient(top, #d2ff6b 0%, #81ff3d 50%, #0cff00 51%, #0dbc03 100%);
+    background: -webkit-linear-gradient(top, #d2ff6b 0%, #81ff3d 50%, #0cff00 51%, #0dbc03 100%);
+    background: linear-gradient(to bottom, #d2ff6b 0%, #81ff3d 50%, #0cff00 51%, #0dbc03 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#d2ff6b', endColorstr='#0dbc03', GradientType=0);
+    text-align: center;
+    padding: 5%;
+    border-radius: 10px;
+    border: 1px solid rgba(255, 255, 255, 0.36);
+    -webkit-box-shadow: 3px 3px 21px 1px rgba(0, 0, 0, 0.75);
+    -moz-box-shadow: 3px 3px 21px 1px rgba(0, 0, 0, 0.75);
+    box-shadow: 3px 3px 21px 1px rgba(0, 0, 0, 0.75);
+    display: inline-block;
+}
+
+.padding8px
+{
+    padding: 8px;
+}
+
+.disblo
+{
+    display: block !important;
+}
+input[type="file"]{
+    display:none;
+}
+.custo-file-upload{
+    background: #f2f6f8;
+    background: -moz-linear-gradient(top, #f2f6f8 0%, #d8e1e7 50%, #b5c6d0 51%, #e0eff9 100%);
+    background: -webkit-linear-gradient(top, #f2f6f8 0%, #d8e1e7 50%, #b5c6d0 51%, #e0eff9 100%);
+    background: linear-gradient(to bottom, #f2f6f8 0%, #d8e1e7 50%, #b5c6d0 51%, #e0eff9 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#f2f6f8', endColorstr='#e0eff9', GradientType=0);
+    display: inline-block;
+    padding: 6px 12px;
+    cursor: pointer;
+    border: 1px solid #8dd2f3;
+    display: inline-block;
+    padding: 6px 12px;
+    cursor: pointer;
+    border: 1px solid #8dd2
 }
